--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,21 +10,12 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 		<title>{{ site.data.info.name }}{% if page.section %}'s {{ page.section }}{% endif %}{% if page.title %} - {{ page.title }}{% endif %}</title>
 		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'></link>
 		<link rel='stylesheet' href='/style/main.css'></link>
-		<script src='{{ page.cdnjs_libs }}/es5-shim/4.1.14/es5-shim.min.js'></script>
-		<script src='{{ page.cdnjs_libs }}/es6-shim/0.33.6/es6-shim.min.js'></script>
-		<script src='/lib/require.js'></script>
-		<script>
-			requirejs.config({
-				baseUrl: '/',
-				paths: {
-					require: 'lib/require',
-					math:    'lib/math.min',
-					arcade:  'arcade/lib'
-				}
-			});
-		</script>
-		<script src='{{ page.cdnjs_libs }}/highlight.js/8.8.0/highlight.min.js'></script>
-		<script src='{{ page.cdnjs_libs }}/highlight.js/8.8.0/languages/glsl.min.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/es5-shim/4.1.14/es5-shim.min.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/es6-shim/0.33.6/es6-shim.min.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/highlight.min.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/cpp.min.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/glsl.min.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/frappe-charts/0.0.8/frappe-charts.min.iife.js'></script>
 		<script type='text/x-mathjax-config'>
 			MathJax.Hub.Config({
 				TeX: {
@@ -45,7 +36,18 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 			});
 		</script>
 		<script type='text/javascript'
-			src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'>
+			src='{{ layout.cdnjs_libs }}/mathjax/2.7.3/MathJax.js?config=TeX-AMS_HTML'>
+		</script>
+		<script src='/lib/require.js'></script>
+		<script>
+			requirejs.config({
+				baseUrl: '/',
+				paths: {
+					require: 'lib/require',
+					math:    'lib/math.min',
+					arcade:  'arcade/lib'
+				}
+			});
 		</script>
 	</head>
 	<body>
