--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,12 +10,12 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 		<title>{{ site.data.info.name }}{% if page.section %}'s {{ page.section }}{% endif %}{% if page.title %} - {{ page.title }}{% endif %}</title>
 		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'></link>
 		<link rel='stylesheet' href='/style/main.css'></link>
-		<script src='{{ layout.cdnjs_libs }}/es5-shim/4.1.14/es5-shim.min.js'></script>
-		<script src='{{ layout.cdnjs_libs }}/es6-shim/0.33.6/es6-shim.min.js'></script>
-		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/highlight.min.js'></script>
-		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/cpp.min.js'></script>
-		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/glsl.min.js'></script>
-		<script src='{{ layout.cdnjs_libs }}/frappe-charts/0.0.8/frappe-charts.min.iife.js'></script>
+		<script src='{{ layout.cdnjs_libs }}/es5-shim/4.5.10/es5-shim.min.js' integrity='sha384-6AZVlZIYRgV+Vg2jmn9KbE0VpOicRJU+zvRsokiH6qtJNvoVD9C19VbcYzbU2bQG' crossorigin='anonymous'></script>
+		<script src='{{ layout.cdnjs_libs }}/es6-shim/0.35.3/es6-shim.min.js' integrity='sha384-MTZNBkn5Y7nVZWpuhBAvvApR0Gvy9pfJduA19jcBR2VyRUnBHsI5jMQpUo2NAuN1' crossorigin='anonymous'></script>
+		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/highlight.min.js' integrity='sha384-ZeLYJ2PNSQjvogWP559CDAf02Qb8FE5OyQicqtz/+UhZutbrwyr87Be7NPH/RgyC' crossorigin='anonymous'></script>
+		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/cpp.min.js' integrity='sha384-ym1mNTxz+QpVTTiHf7i5cXz4YBzHvs+PsFxUEcTU0/Hfcs5iaFr2hYKBEBZqbrnt' crossorigin='anonymous'></script>
+		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/glsl.min.js' integrity='sha384-WW/56CjxoJng+zfBlADEkm74yGpoHaS8brRP/vIzmABMe4JumR9sujbyabam2djA' crossorigin='anonymous'></script>
+		<script src='{{ layout.cdnjs_libs }}/frappe-charts/1.1.0/frappe-charts.min.iife.js' integrity='sha384-maB+gauj9fu+/9ryCIt+yJJvxiUEqBti4YnmU81e1f42E2snxPe5r8CeHH6zKhZC' crossorigin='anonymous'></script>
 		<script type='text/x-mathjax-config'>
 			MathJax.Hub.Config({
 				TeX: {
