--- a/_includes/graph.html
+++ b/_includes/graph.html
@@ -1,8 +1,7 @@
 <div id='{{ include.id }}'></div>
 <script>
     {
-        let chart = new Chart({
-            parent: '#{{ include.id }}',
+        let chart = new frappe.Chart('#{{ include.id }}', {
             title: '{{ include.title }}',
             type: '{{ include.type }}',
             data: {{ include.data | jsonify }}
