--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 	<head>
 		<meta charset='UTF-8'>
 		<title>{{ site.data.info.name }}{% if page.section %}'s {{ page.section }}{% endif %}{% if page.title %} - {{ page.title }}{% endif %}</title>
-		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'></link>
+		<link rel='stylesheet' href='{{ layout.cdnjs_libs }}/font-awesome/4.7.0/css/font-awesome.min.css' integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN' crossorigin='anonymous'></link>
 		<link rel='stylesheet' href='/style/main.css'></link>
 		<script src='{{ layout.cdnjs_libs }}/es5-shim/4.5.10/es5-shim.min.js' integrity='sha384-6AZVlZIYRgV+Vg2jmn9KbE0VpOicRJU+zvRsokiH6qtJNvoVD9C19VbcYzbU2bQG' crossorigin='anonymous'></script>
 		<script src='{{ layout.cdnjs_libs }}/es6-shim/0.35.3/es6-shim.min.js' integrity='sha384-MTZNBkn5Y7nVZWpuhBAvvApR0Gvy9pfJduA19jcBR2VyRUnBHsI5jMQpUo2NAuN1' crossorigin='anonymous'></script>
@@ -16,22 +16,11 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/cpp.min.js' integrity='sha384-ym1mNTxz+QpVTTiHf7i5cXz4YBzHvs+PsFxUEcTU0/Hfcs5iaFr2hYKBEBZqbrnt' crossorigin='anonymous'></script>
 		<script src='{{ layout.cdnjs_libs }}/highlight.js/9.12.0/languages/glsl.min.js' integrity='sha384-WW/56CjxoJng+zfBlADEkm74yGpoHaS8brRP/vIzmABMe4JumR9sujbyabam2djA' crossorigin='anonymous'></script>
 		<script src='{{ layout.cdnjs_libs }}/frappe-charts/1.1.0/frappe-charts.min.iife.js' integrity='sha384-maB+gauj9fu+/9ryCIt+yJJvxiUEqBti4YnmU81e1f42E2snxPe5r8CeHH6zKhZC' crossorigin='anonymous'></script>
+		<link rel='stylesheet' href='{{ layout.cdnjs_libs }}/KaTeX/0.9.0/katex.min.css' integrity='sha384-TEMocfGvRuD1rIAacqrknm5BQZ7W7uWitoih+jMNFXQIbNl16bO8OZmylH/Vi/Ei' crossorigin='anonymous'></link>
+		<script src='{{ layout.cdnjs_libs }}/KaTeX/0.9.0/katex.min.js' integrity='sha384-jmxIlussZWB7qCuB+PgKG1uLjjxbVVIayPJwi6cG6Zb4YKq0JIw+OMnkkEC7kYCq' crossorigin='anonymous'></script>
 		<script type='text/x-mathjax-config'>
 			MathJax.Hub.Config({
 				TeX: {
-					Macros: {
-						boldVec:   ["\\boldsymbol{#1}", 1],
-						vecDef:    ["{\\left\\langle #1 \\right\\rangle}", 1],
-						unitVec:   ["\\boldVec{\\hat{#1}}", 1],
-						norm:      ["{\\left\\lVert #1 \\right\\rVert}", 1],
-						normalize: ["\\frac{#1}{\\norm{#1}}", 1],
-						inlineFraction:  ["\\left.\\raise{0.2em}{\\small #1}\\middle/\\lower{0.2em}{\\small #2}\\right.", 2],
-						inlineNormalize: ["\\inlineFraction{#1}{\\norm{#1}}", 1],
-						NdotL:     "{\\unitVec{n}\\cdot\\unitVec{l}}",
-						NdotV:     "{\\unitVec{n}\\cdot\\unitVec{v}}",
-						NdotH:     "{\\unitVec{n}\\cdot\\unitVec{h}}",
-						VdotH:     "{\\unitVec{v}\\cdot\\unitVec{h}}"
-					}
 				}
 			});
 		</script>
@@ -88,6 +77,32 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 			{{ content }}
 			</div>
 		</div>
+		<script>
+			let katex_config = {
+				macros: {
+						'\\boldVec':   "\\boldsymbol{#1}",
+						'\\vecDef':    "{\\left\\langle #1 \\right\\rangle}",
+						'\\unitVec':   "\\boldVec{\\hat{#1}}",
+						'\\norm':      "{\\left\\lVert #1 \\right\\rVert}",
+						'\\normalize': "\\frac{#1}{\\norm{#1}}",
+						'\\inlineFraction':  "\\left.\\raise{0.2em}{\\small #1}\\middle/\\lower{0.2em}{\\small #2}\\right.",
+						'\\inlineNormalize': "\\inlineFraction{#1}{\\norm{#1}}",
+						'\\NdotL':     "{\\unitVec{n}\\cdot\\unitVec{l}}",
+						'\\NdotV':     "{\\unitVec{n}\\cdot\\unitVec{v}}",
+						'\\NdotH':     "{\\unitVec{n}\\cdot\\unitVec{h}}",
+						'\\VdotH':     "{\\unitVec{v}\\cdot\\unitVec{h}}"
+					}
+				}
+			Array.prototype.forEach.call(document.getElementsByClassName("math"), element => {
+				let math = element.textContent;
+				let displayMode = element.classList.contains('displayMode')
+				let config = Object.assign({ 'displayMode': displayMode }, katex_config)
+				while (element.firstChild) {
+					element.removeChild(element.firstChild)
+				}
+				katex.render(math, element, config)
+			})
+		</script>
 	</body>
 </html>
 
