Fix a few equations

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -76,7 +76,7 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 						'\\unitVec':   "\\boldVec{\\hat{#1}}",
 						'\\norm':      "{\\left\\lVert #1 \\right\\rVert}",
 						'\\normalize': "\\frac{#1}{\\norm{#1}}",
-						'\\inlineFraction':  "\\left.\\raise{0.2em}{\\small #1}\\middle/\\lower{0.2em}{\\small #2}\\right.",
+						'\\inlineFraction':  "\\left.\\raisebox{0.2em}{$\\small #1$}\\middle/\\raisebox{-0.2em}{$\\small #2$}\\right.",
 						'\\inlineNormalize': "\\inlineFraction{#1}{\\norm{#1}}",
 						'\\NdotL':     "{\\unitVec{n}\\cdot\\unitVec{l}}",
 						'\\NdotV':     "{\\unitVec{n}\\cdot\\unitVec{v}}",
