--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,40 +1,1 @@
-<div id='ml-comments'>
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-		(function() {
-			var secureUrl = 'https://{{ site.data.info.domain }}{{ page.url }}';
-			if (window.location.protocol.toLowerCase() == 'https:') {
-				var disqus_shortname  = 'zvxryb';
-				var disqus_identifier = '{{ page.id }}';
-				var disqus_title      = '{{ page.title }}';
-				var disqus_url        = secureUrl;
-
-				/* * * DON'T EDIT BELOW THIS LINE * * */
-				(function() {
-					var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-					dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-					(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-				})();
-			} else {
-				var notice = document.createElement('h2');
-				notice.appendChild(document.createTextNode('Comments Disabled'));
-
-				var secureLink = document.createElement('a');
-				secureLink.href = secureUrl;
-				secureLink.appendChild(document.createTextNode('secure page'));
-
-				var details = document.createElement('p');
-				details.appendChild(document.createTextNode(
-					'Disqus is disabled on insecure pages.  Load the '));
-				details.appendChild(secureLink);
-				details.appendChild(document.createTextNode('.'));
-
-				var comments = document.getElementById('ml-comments');
-				comments.appendChild(notice );
-				comments.appendChild(details);
-			}
-		})();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-</div>
-
+<div id='ml-comments'></div>
