--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -43,16 +43,14 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 					<i class='ml-icon fa fa-pencil'></i>
 					<span class='ml-text'>Blog</span>
 				</h2></a>
+				<a class='ml-item' href='/arcade/'><h2>
+					<i class='ml-icon fa fa-gamepad'></i>
+					<span class='ml-text'>WebApps</span>
+				</h2></a>
 				<a class='ml-item' href='/resume/'><h2>
 					<i class='ml-icon fa fa-briefcase'></i>
 					<span class='ml-text'>Resume</span>
 				</h2></a>
-				<!--
-				<a class='ml-item' href='/arcade/'><h2>
-					<i class='ml-icon fa fa-gamepad'></i>
-					<span class='ml-text'>Arcade</span>
-				</h2></a>
-				-->
 				<a class='ml-item' href='https://github.com/zvxryb'><h2>
 					<i class='ml-icon fa fa-github-alt'></i>
 					<span class='ml-text'>Github</span>
